--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -89,6 +89,7 @@ layout: default
                 <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
                 <div id="gitalk-container"></div>
                 <script type="text/javascript">
+                    var de_pathname = decodeURI(window.location.pathname);
                     var gitalk = new Gitalk({
                     clientID: '{{site.gitalk.clientID}}',
                     clientSecret: '{{site.gitalk.clientSecret}}',
@@ -96,8 +97,8 @@ layout: default
                     owner: '{{site.gitalk.owner}}',
                     admin: ['{{site.gitalk.admin}}'],
                     distractionFreeMode: {{site.gitalk.distractionFreeMode}},
-                    id: window.location.pathname,
-                    });
+                    id: de_pathname,
+                    });                    
                     gitalk.render('gitalk-container');
                 </script>
                 {% endif %}
