--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,5 +51,5 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
-    <script></script>
+    <script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 </head>
