给每篇文章，增加了访问统计

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -164,6 +164,9 @@ layout: default
                     {% endfor %}
                 </ul>
                 {% endif %}
+                <!-- 本文总阅读量，使用不蒜子统计 -->
+                <hr>
+                <h5><span id="busuanzi_container_page_pv">本文总阅读量：<span id="busuanzi_value_page_pv"></span>次</span></h5>
             </div>
         </div>
     </div>
